src/main/k8s/istio/app-istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: social-service-route
  namespace: default
spec:
  hosts:
    - socialserver
  http:
    - route:
        - destination:
            host: socialserver
            subset: v2
          weight: 25
        - destination:
            host: socialserver
            subset: v1
          weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: social-service-destination
  namespace: default
spec:
  host: socialserver
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
